<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seed_robotics</name>
  <version>0.2.0</version>
  <description>RH8D robotic hand controller for ROS 2 Jazzy</description>
  <maintainer email="lennart@seedrobotics.com">lucas</maintainer>
  <license>BSD</license>
  <author email="lucas.combe@gmail.com">Lucas Combe</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_sdk</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>ros2_fts</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
